--- a/public/styles/small-components/small-components.css
+++ b/public/styles/small-components/small-components.css
@@ -1,3 +1,36 @@
+/* @keyframes drawText {
+    from {
+      stroke-dashoffset: 120;
+    }
+    to {
+      stroke-dashoffset: 0;
+    }
+  } */
+  @keyframes drawM {
+    0% {
+      stroke-dashoffset: 2000;
+      fill-opacity: 0;
+    }
+    70% {
+      fill-opacity: 0;
+    }
+    100% {
+      stroke-dashoffset: 0;
+      fill-opacity: 1;
+    }
+  }
+  @media (max-width: 768px) {
+    .svg-text text {
+      font-size: 220px;
+      letter-spacing: -10px;
+    }
+
+    .title {
+      font-size: 26px;
+      letter-spacing: 6px;
+    }
+  }
+
 /* Profile Card */
 .profile-card {
     width: 100%;
@@ -38,6 +71,12 @@
                     width: 40px;
                     border-radius: 13px;
 
+                    /* &:has(.noprofile) {
+                      &::before {
+                        border: 1.5px solid #fece26;
+                      }
+                    } */
+
                     &::before {
                         content: '';
                         display: block;
@@ -48,6 +87,46 @@
                     }
 
                     img {}
+                    .noprofile {
+                        width: 40px;
+                        height: 40px;
+                        border-radius: 10px;
+                        background: #010405;
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                      
+                        svg {
+                          width: 100%;
+                          height: 100%;
+                          max-width: 30px;
+                        }
+                        .animate-m {
+                            stroke: #fece26;
+                            stroke-width: 2;
+                            fill-opacity: 0;
+                            stroke-dasharray: 2000;
+                            stroke-dashoffset: 2000;
+                            animation: drawM 3s ease-in-out infinite alternate;
+                            stroke-linecap: round;
+                            stroke-linejoin: round;
+                            transition: var(--transition-normal);
+                          }
+                        /* text {
+                            font-size: 26px;
+                            font-weight: 900;
+                            letter-spacing: 0px;
+                            fill: none;
+                            stroke: #FFF;
+                            stroke-width: 1;
+                            stroke-dasharray: 120;
+                            stroke-dashoffset: 120;
+                            text-anchor: middle;
+                            dominant-baseline: middle;
+                            animation: drawText 4s ease-in-out infinite alternate;
+                            font-family: var(--font-family-heading);
+                        } */
+                      }
                 }
             }
 
@@ -139,6 +218,30 @@
             height: 100%;
             object-fit: cover;
         }
+        .nomedia {
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(93.25deg,#c89110 -49.57%, #9c4a12 98.1%);
+            background-blend-mode: multiply;
+            &::before {
+                opacity: 1;
+                filter: brightness(0) invert(1);
+                width: 40px;
+                height: 40px;
+                position: absolute;
+                top: 10px;
+                right: 10px;
+                z-index: 2;
+                background-color: #00000029;
+                border: 1px solid #ffffff5b;
+                border-radius: 15px;
+                background-size: 24px;
+            }
+            &::after {
+                content: "";
+                background: var(--btn-gradient);
+            }
+        }
     }
 
     .profile-card__main {
@@ -163,11 +266,16 @@
                 width: 58px;
                 width: 54px;
 
-                img {
+                img, .noprofile {
                     width: 100%;
                     height: 100%;
                     aspect-ratio: 1/1;
                     object-fit: cover;
+                }
+                .noprofile {
+                    svg {
+                        max-width: 40px;
+                    }
                 }
             }
 
