--- a/public/styles/components/components.css
+++ b/public/styles/components/components.css
@@ -3003,6 +3003,11 @@
                          height: 100%;
                          transition: var(--transition-fast);
                        }
+                       .nomedia {
+                        &::before {
+                          background-size: 60%;
+                        }
+                       }
                        .ply_btn {
                         z-index: 5;
                         position: absolute;
