--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -218,6 +218,10 @@ body {
       animation: wave 4s ease-in-out infinite;
     }
   }
+  &.small {
+    padding: clamp(20px, 3vw, 32px);
+    min-height: clamp(140px, 25vw, 220px);
+  }
 }
 .noprofile {
   width: 40px;
@@ -2291,6 +2295,16 @@ body {
         padding: 12px;
         background-color: #FFFFFF;
       }
+      .label-input {
+        &.calendar-dropdown {
+          .input-placeholder-icon {
+            z-index: 3 !important;
+          }
+          input.form-input {
+            padding-inline-start: 35px !important;
+          }
+        }
+      }
       .input-wrap {
         input, textarea {
           padding: 12px;
@@ -2415,6 +2429,7 @@ body {
         font-family: var(--font-family-base);
         .img_wrap {
           background-color: #f4f4f4;
+          border: 1.5px solid #ebebeb;
           border-radius: 15px;
           width: 80px;
           height: 80px;
@@ -2441,7 +2456,7 @@ body {
           }
           .upldimg {
             border-radius: 15px;
-            min-width: 80px;
+            // min-width: 80px;
             aspect-ratio: 1;
             object-fit: cover;
             width: 100%;
@@ -2502,7 +2517,7 @@ body {
             align-items: center;
             max-width: 40%;
             width: 100%;
-            justify-content: space-around;
+            justify-content: space-between;
             margin: 0px;
             li {
             margin: 0px;
@@ -2556,6 +2571,16 @@ body {
             background: #000;
             svg {
               stroke: #fdc926;
+            }
+          }
+          &:disabled, &.disabled {
+            cursor: not-allowed;
+            background-color: #f2f2f2;
+            box-shadow: none;
+            opacity: 0.7;
+            pointer-events: none;
+            svg {
+              stroke: #999;
             }
           }
         }
@@ -5908,7 +5933,7 @@ body {
               transition: var(--transition-normal);
               z-index: 1;
             }
-            img {
+            img, .noprofile {
               width: 100%;
               height: 100%;
               object-fit: cover;
@@ -6176,6 +6201,173 @@ body {
               transform: unset;
               img {
                 height: 93.5%;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+// Message Page PPV Request Start 
+.msg-page-wrapper {
+  .msg-page-container {
+    .msg-chats-layout {
+      .msg-chats-rooms-container {
+        .msg-chat-room-layout {
+          .msg-chat-room-container {
+            .chat-room-body-layout {
+              .chat-room-body-container {
+                .ppvrequest_wrap {
+                  padding: 15px;
+                  width: 100%;
+                  max-width: 80%;
+                  margin: 25px auto;
+                  gap: 15px;
+                  display: flex;
+                  flex-direction: column;
+                  background-color: #FFF;
+                  box-shadow: 0px 4px 21.9px 0px #FECE2678;
+                  border-radius: 21px;
+                  .premium-btn {
+                    &.ppvbtn {
+                      padding: 15px;
+                      border-radius: 14px;
+                      span {
+                        font-size: 16px;
+                      }
+                    }
+                  }
+                  .cont_wrap {
+                    gap: 4px;
+                    display: flex;
+                    flex-direction: column;
+                  }
+                  h3 {
+                    font-size: 16px;
+                    line-height: 100%;
+                    font-weight: 400;
+                    font-style: normal;
+                    letter-spacing: 0.4px;
+                    text-transform: capitalize;
+                    font-family: var(--font-family-heading);
+                  }
+                  p {
+                    color: #505050;
+                    font-size: 13px;
+                    line-height: 100%;
+                    font-weight: 500;
+                    font-style: normal;
+                    letter-spacing: 0px;
+                    // text-transform: capitalize;
+                    font-family: var(--font-family-base);
+                  }
+                  .upload-wrapper {
+                    display: flex;
+                    flex-direction: row;
+                    flex-wrap: wrap;
+                    gap: 10px;
+                    margin: 0px;
+                    position: relative;
+                    z-index: 0;
+                    background: #ffffff;
+                    border: 0px;
+                    padding: 0px;
+                    color: #444444;
+                    font-size: 14px;
+                    line-height: 100%;
+                    font-weight: 500;
+                    letter-spacing: 0px;
+                    font-family: var(--font-family-base);
+                    .img_wrap {
+                      background-color: #f4f4f4;
+                      border: 1.5px solid #ebebeb;
+                      border-radius: 15px;
+                      width: 60px;
+                      height: 60px;
+                      min-width: 60px;
+                      display: grid;
+                      place-items: center;
+                      position: relative;
+                      left: 0px;
+                      margin-right: 0px;
+                      transition: var(--transition-fast);
+                      .icons {
+                        width: 32px;
+                        height: 32px;
+                      }
+                      .upldimg {
+                        border-radius: 15px;
+                        // min-width: 80px;
+                        aspect-ratio: 1;
+                        object-fit: cover;
+                        width: 100%;
+                        height: 100%;
+                      }
+                      .btn-danger {
+                        visibility: hidden;
+                        opacity: 0;
+                        border-radius: 8px;
+                        padding: 3px;
+                        position: absolute;
+                        top: 3px;
+                        right: 3px;
+                        box-shadow: 0 6px 4px -4px #08080803, 0 2px 1.5px -4px #0808080a, 0 4px 4px #00000017;
+                        transition: var(--transition-fast);
+                        svg {
+                          width: 16px;
+                          height: 16px;
+                        }
+                      }
+                      &:hover {
+                        .btn-danger {
+                          visibility: visible;
+                          opacity: 1;
+                        }
+                      }
+                    }
+                  }
+                  .actions {
+                    gap: 8px;
+                    display: flex;
+                    flex-wrap: wrap;
+                    align-items: center;
+                    .text-gradiant {
+                      font-size: 16px;
+                      line-height: 100%;
+                      font-weight: 500;
+                      letter-spacing: .25px;
+                      background: linear-gradient(103.7deg, #fece26 4.76%, #e5741f 118.16%);
+                      -webkit-text-fill-color: transparent;
+                      color: #0000;
+                      -webkit-background-clip: text;
+                      background-clip: text;
+                      font-family: var(--font-family-heading);
+                      margin-bottom: 3px;
+                    }
+                    .right {
+                      margin-left: auto;
+                      gap: 8px;
+                      display: flex;
+                      flex-wrap: wrap;
+                      align-items: center;
+                    } 
+                    button {
+                      border-radius: 12px;
+                      min-width: 76px;
+                      max-width: 76px;
+                      padding: 10px 0;
+                      span {
+                        font-size: 13px;
+                      }
+                    }
+                  }
+                  /* ========== Mobile Screen Size ========== */
+                  @media screen and (max-width: 767px) {
+                    max-width: 100%;
+                  }
+                }
               }
             }
           }
