--- a/public/styles/layouts/layouts.css
+++ b/public/styles/layouts/layouts.css
@@ -166,6 +166,7 @@
 
             .creator-media-card__media-wrapper {
                max-width: 250px;
+               min-width: 250px;
                grid-row: span 2;
             }
 
@@ -253,6 +254,7 @@
 
                .creator-content-card__media {
                   max-width: 250px;
+                  min-width: 250px;
                   grid-row: span 2;
                }
 
