--- a/public/styles/small-components/small-components.css
+++ b/public/styles/small-components/small-components.css
@@ -901,6 +901,7 @@
 
     .creator-content-card {
         width: 100%;
+        height: 100%;
         display: flex;
         flex-direction: column;
         background-color: #F4F4F4;
