--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -52,7 +52,6 @@ body {
   animation: spin 0.9s linear infinite;
 }
 
-
 /* Animation Start */
 @keyframes spin {
   to {transform: rotate(360deg);}
@@ -1314,6 +1313,18 @@ body {
       display: flex;
       flex-direction: column;
       gap: 15px;
+      .cate-back-btn {
+        justify-content: center;
+        align-items: center;
+        display: flex;
+        cursor: pointer;
+        width: 40px;
+        height: 40px;
+        min-width: 40px;
+        background: #f4f4f4;
+        border-radius: 12px;
+        transition: var(--transition-fast);
+      }
       .moneyboy-feed-page-cate-buttons {
         border-radius: 18px;
         top: 0px;
@@ -1644,6 +1655,14 @@ body {
       }
       .main_cont {
         max-width: 100%;
+        .head {
+          gap: 6px;
+          padding: 7px;
+          display: flex;
+          .textcont {
+            width: -webkit-fill-available;
+          }
+        }
         h3.heading {
           font-size: 40px;
           line-height: 44px;
