--- a/public/styles/small-components/small-components.css
+++ b/public/styles/small-components/small-components.css
@@ -2590,7 +2590,7 @@
             inset: 0;
             display: flex;
 
-            img {
+            img, video {
                 transition: var(--transition-fast);
                 width: 100%;
                 height: 100%;
@@ -2655,7 +2655,7 @@
                         }
 
                         &.video-icon {
-                            &:hover {
+                            &:hover, &.active {
                                 svg {
                                     path {
 
@@ -2670,7 +2670,7 @@
                         }
 
                         &.photo-icon {
-                            &:hover {
+                            &:hover, &.active {
                                 svg {
                                     path {
                                         &:nth-child(1) {
@@ -2683,7 +2683,7 @@
                         }
 
                         &.wishlist-icon {
-                            &:hover {
+                            &:hover, &.active {
                                 svg {
                                     path {
                                         &:nth-child(1) {
@@ -2726,6 +2726,10 @@
                     letter-spacing: .75px;
                     color: #FFFFFF99;
                     margin: 8px 0 10px;
+                    display: -webkit-box;
+                    -webkit-line-clamp: 3;
+                    -webkit-box-orient: vertical;
+                    overflow: hidden;
                 }
 
                 .btn-txt-gradient {
