--- a/public/styles/small-components/small-components.css
+++ b/public/styles/small-components/small-components.css
@@ -2849,6 +2849,23 @@
             justify-content: center;
             border-radius: 28px;
 
+            .edit_image {
+                z-index: 6;
+                cursor: pointer;
+                width: 24px;
+                height: 24px;
+                transition: var(--transition-fast);
+                background-color: #fdfdfd;
+                border-radius: 8px;
+                place-items: center;
+                padding: 3px;
+                display: grid;
+                position: absolute;
+                top: 15px;
+                right: 15px;
+                box-shadow: 0 6px 4px -4px #08080803, 0 2px 1.5px -4px #0808080a, 0 4px 4px #00000017;
+            }
+
             img, .noprofile {
                 width: 100%;
                 height: 100%;
