--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -6631,3 +6631,20 @@ body {
   height: calc(100vh - 140px);
   overflow-y: auto;
 }
+
+// country flags in circle added by mihir for requirments 
+.flag-circle {
+  width: 22px;
+  height: 22px;
+  border-radius: 50%;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.flag-circle img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
