--- a/public/styles/components/responsive.css
+++ b/public/styles/components/responsive.css
@@ -1597,6 +1597,11 @@
                         width: 46px;
                         border-radius: 14px;
 
+                        .noprofile {
+                            width: 100%;
+                            height: 100%;
+                        }
+
                         &::before {}
 
                         img {}
