--- a/public/styles/small-components/small-components.css
+++ b/public/styles/small-components/small-components.css
@@ -626,11 +626,16 @@
             width: 100%;
             height: 100%;
 
-            img {
+            img, .noprofile {
                 width: 100%;
                 height: 100%;
                 object-fit: cover;
                 object-position: center;
+                &.noprofile {
+                    svg {
+                        max-width: 60%;
+                    }
+                }
             }
         }
 
