--- a/public/styles/components/components.css
+++ b/public/styles/components/components.css
@@ -2530,12 +2530,21 @@
    box-shadow: 0px -1px 17px 0px #0000000a;
  
    .mobile-navigations {
+     &.lgout {
+      nav {
+        ul {
+          grid-template-columns: 1fr 1fr;
+        }
+      }
+     }
      nav {
        padding-top: 13px;
+
  
        ul {
          display: grid;
-         grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+         grid-template-columns: 1fr 1fr 1fr 1fr;
+         
  
          li {
            /* width: 74px; */
