--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -27,6 +27,14 @@ body {
   font-family: var(--font-family-base);
 }
 
+.custom-select-element {
+  &.optionsright {
+    .custom-select-options-dropdown-wrapper {
+      right: 0px;
+    }
+  }
+}
+
 // color Define
 .text-green {
   color: #22c55e !important;
@@ -974,12 +982,10 @@ body {
   }
   .react-datepicker {
     border-radius: 14px;
-    overflow: hidden;
+    overflow: visible;
     background-color: #f9f9f9;
     border: 1.5px solid #010405;
-    box-shadow:
-      0 6px 4px -4px #08080816,
-      0 2px 13.5px 1px #08080825;
+    box-shadow: 0 6px 4px -4px #08080816, 0 2px 13.5px 1px #08080825;
     font-family: var(--font-family-base);
     transition: var(--transition-normal);
     .react-datepicker__navigation {
@@ -1013,7 +1019,8 @@ body {
       }
     }
     .react-datepicker__header {
-      padding: 8px 0px;
+      padding: 7px;
+      border-radius: 12px 12px 0px 0px;
       background-color: #010405;
       border-bottom: 2.5px solid #010405;
       h2 {
@@ -1023,6 +1030,20 @@ body {
         font-size: 16px;
         line-height: 100%;
         font-family: var(--font-family-heading);
+      }
+      .select_wrap {
+        gap: 6px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        .custom-select-element {
+          .custom-select-label-wrapper {
+            padding: 6px 8px;
+          }
+          .custom-select-options-dropdown-wrapper {
+
+          }
+        }
       }
     }
     .react-datepicker__month {
@@ -2435,9 +2456,7 @@ body {
     max-width: 650px;
     background-color: white;
     border-radius: 20px;
-    box-shadow:
-      0px 6px 12px -4px #0808081f,
-      0px 2px 13.5px 1px #08080803;
+    box-shadow: 0px 6px 12px -4px #0808081f, 0px 2px 13.5px 1px #08080803;
     transition: var(--transition-fast);
     .modal_head {
       display: flex;
@@ -3590,6 +3609,76 @@ body {
         border-radius: 15px;
       }
     }
+    &.rdcnvrstn-modal {
+      padding: 40px;
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
+      max-width: 550px;
+      .close-btn {
+        position: absolute;
+        top: 20px;
+        right: 20px;
+      }
+      h3.title {
+        justify-content: start;
+        font-size: 28px;
+        margin-bottom: 0px;
+      }
+      label {
+        color: #000;
+        font-size: 14px;
+        line-height: 18px;
+        margin-bottom: 6px;
+        display: inline-block;
+        span {
+          color: #cd3f3f;
+        }
+        &.right {
+          text-align: right;
+          justify-content: end;
+          width: 100%;
+          gap: 5px;
+          display: inline-flex;
+          color: #505050;
+          font-size: 12px;
+          line-height: 14px;
+          font-style: normal;
+          font-weight: 500;
+          margin-bottom: 0px;
+        }
+      }
+      input,
+      textarea {
+        font-size: 14px;
+        padding: 12px;
+        background-color: #fff;
+        &::placeholder {
+          color: #878787;
+        }
+      }
+      .custom-select-element {
+        background-color: #fff;
+        .custom-select-label-wrapper {
+          padding: 12px;
+        }
+      }
+      .actions {
+        gap: 10px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-wrap: nowrap;
+        button {
+          cursor: pointer;
+          width: 100%;
+          max-width: 30%;
+          padding: 14px 8px;
+          border-radius: 14px;
+          height: -webkit-fill-available;
+        }
+      }
+    }
   }
   &.show {
     display: flex;
@@ -3954,6 +4043,30 @@ body {
         }
       }
       &.report-modal {
+        padding: 20px;
+        max-width: 90%;
+        h3.title {
+          justify-content: start;
+          font-size: 22px;
+          max-width: 93%;
+        }
+        .custom-select-element {
+          .custom-select-label-wrapper {
+            .custom-select-chevron {
+              svg {
+                width: 16px !important;
+                height: 16px !important;
+              }
+            }
+          }
+        }
+        .actions {
+          button {
+            padding: 12px 8px;
+          }
+        }
+      }
+      &.rdcnvrstn-modal {
         padding: 20px;
         max-width: 90%;
         h3.title {
@@ -7058,12 +7171,11 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-}
-
-.flag-circle img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
 }
 
 .resend-timer {
