--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -3679,6 +3679,55 @@ body {
         }
       }
     }
+    &.imgcrop-modal {
+      padding: 40px;
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
+      max-width: 550px;
+      .close-btn {
+        position: absolute;
+        top: 20px;
+        right: 20px;
+      }
+      h3.title {
+        justify-content: start;
+        font-size: 28px;
+        margin-bottom: 0px;
+      }
+      .img_wrap {
+        width: 100%;
+        max-width: 300px;
+        aspect-ratio: 1;
+        margin: 0 auto;
+        img {
+          aspect-ratio: 1;
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+          border: 2px solid #f4f4f4;
+          border-radius: 24px;
+          box-shadow: var(--card-shadow);
+          transition: var(--transition-normal);
+          display: block;
+        }
+      }
+      .actions {
+        gap: 10px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-wrap: nowrap;
+        button {
+          cursor: pointer;
+          width: 100%;
+          max-width: 30%;
+          padding: 14px 8px;
+          border-radius: 14px;
+          height: -webkit-fill-available;
+        }
+      }
+    }
   }
   &.show {
     display: flex;
